<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageBack"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:tint="@color/colorIcons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/colorNoteColor2"
            android:fontFamily="@font/ubuntu_bold"
            android:textSize="@dimen/_30sdp"
            android:gravity="center"
            android:layout_margin="@dimen/_30sdp"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorTextHint"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:fontFamily="@font/ubuntu_regular"
            tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorTextHint"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:fontFamily="@font/ubuntu_regular"
            tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorTextHint"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:fontFamily="@font/ubuntu_regular"
            tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/registerConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/colorTextHint"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorTextHint"
            android:fontFamily="@font/ubuntu_regular"
            tools:ignore="TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/loginLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_Link"
            android:textAlignment="textEnd"
            android:fontFamily="@font/ubuntu_regular"
            android:textColor="@color/colorNoteColor2" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:backgroundTint="@color/colorNoteColor2"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>
</RelativeLayout>